--- a/ife-task1.6通过HTML及CSS模拟报纸排版Document.html
+++ b/ife-task1.6通过HTML及CSS模拟报纸排版Document.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>任务六：通过HTML及CSS模拟报纸排版Document</title>
-    <link rel="stylesheet" href="style/task1.6.css">
+    <link rel="stylesheet" href="style/task1-6.css">
 </head>
 <body>
     <div class="main clearfix">
