--- a/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/index.html
+++ b/ife-task1.7实现常见的技术产品官网的页面架构及样式布局/index.html
@@ -12,7 +12,7 @@
         <div class="nav_bar ">
           <div class="center">
             <div class="logo_con fl">
-               <img src="images/logo.png" alt="logo">
+               <img src="http://img.geekerhua.com/ife/1.7/logo.png" alt="logo">
                <h1>新世界</h1>
            </div>
            <div class="right fr">
@@ -67,7 +67,7 @@
 
         <div class="section3 ">
           <div class="center clearfix">
-            <img src="images/logo.png" alt="logo">
+            <img src="http://img.geekerhua.com/ife/1.7/logo.png" alt="logo">
             <p>关于新世界，你不知道的还有什么?</p>
           </div>
         </div>
@@ -80,25 +80,25 @@
             <div class="box">
               <div class="menu menu1">
                 <span>中国</span>
-                <a href="">→</a>
+                <a href=""></a>
               </div>
 
               <div class="menu menu2">
                 <span>省份</span>
-                <a href="">→</a>
-                <select name="province" id="">
+                <a href=""></a>
+                <!-- <select name="province" id="">
                   <option value="010">北京市</option>
                   <option value="020">上海市</option>
                   <option value="040">河北省</option>
                   <option value="061">陕西市</option>
                   <option value="061">内蒙古自治区</option>
                   <option value="061">河南省</option>
-                </select>
+                </select> -->
               </div>
 
               <div class="menu menu3">
                 <span>城市</span>
-                <a href="">→</a>
+                <a href=""></a>
               </div>
               <a class="menu search" href="#">搜&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;索</a>
             </div>
@@ -108,24 +108,24 @@
         <div class="section5 clearfix">
           <div class="content">
             <div class="pic1">
-              <img src="images/pic1.jpg" alt="picture1">
+              <img src="http://img.geekerhua.com/ife/1.7/pic1.jpg" alt="picture1">
               <h3>北京活动</h3>
               <p>新社区大联盟</p>
             </div>
             <div class="pic2">
               <h3>上海活动</h3>
               <p>夜上海新景观探索</p>
-              <img src="images/pic2.jpg" alt="picture2">
+              <img src="http://img.geekerhua.com/ife/1.7/pic2.jpg" alt="picture2">
             </div>
             <div class="pic3">
-              <img src="images/pic3.jpg" alt="picture3">
+              <img src="http://img.geekerhua.com/ife/1.7/pic3.jpg" alt="picture3">
               <h3>深圳活动</h3>
               <p>全新海岸线观点站</p>
             </div>
             <div class="pic4">
               <h3>香港活动</h3>
               <p>奢侈消费大派送</p> 
-              <img src="images/pic4.jpg" alt="picture4">
+              <img src="http://img.geekerhua.com/ife/1.7/pic4.jpg" alt="picture4">
             </div>
             
 
