--- a/ife-task1.9使用HTML&CSS实现一个复杂页面/index.html
+++ b/ife-task1.9使用HTML&CSS实现一个复杂页面/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><head><link href="style.css" rel="stylesheet"><meta charset="utf-8"><title>任务九:使用HTML/CSS实现一个复杂页面</title></head><html><body><h1>你好</h1><p>haha</p></body></html>
+<!DOCTYPE html>
+
+<head>
+    <link href="style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>任务九:使用HTML/CSS实现一个复杂页面</title>
+</head>
+<html>
+
+<body>
+    <h1>你好</h1>
+    <p>haha</p>
+</body>
+
+</html>
