--- a/ife-task1.11移动端页面/index.html
+++ b/ife-task1.11移动端页面/index.html
@@ -21,37 +21,37 @@
         </ul>
       </nav>
       <div class="center_con clearfix">
-        <div class="banner"><a> <img src="./images/adv01.jpg" alt="banner"></a></div>
+        <div class="banner"><a> <img src="http://img.geekerhua.com/ife/1.11/adv01.jpg" alt="banner"></a></div>
         <div class="menu clearfix">
           <ul>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>西瓜</h3></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>土豆</h3></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>草莓</h3></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>番茄</h3></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>红枣</h3></a></li>
           </ul>
         </div>
         <div class="classify clearfix">
           <ul>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>分栏一</h3>
                 <h4>分栏小标题</h4></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>分栏一</h3>
                 <h4>分栏小标题</h4></a></li>
-            <li><a href=""><img src="./images/icon07.png" alt="icon">
+            <li><a href=""><img src="http://img.geekerhua.com/ife/1.11/icon01.png" alt="icon">
                 <h3>分栏一</h3>
                 <h4>分栏小标题</h4></a></li>
           </ul>
         </div>
         <div class="section clearfix">
           <h2>模块一</h2>
-          <div class="part"><img src="./images/logo.png" alt="icon">
+          <div class="part"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="icon">
             <ul>
               <li><a href="">
                   <h3>1这是文章</h3></a></li>
@@ -63,7 +63,7 @@
                   <h3>4这是文章</h3></a></li>
             </ul>
           </div>
-          <div class="part"><img src="./images/logo.png" alt="icon">
+          <div class="part"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="icon">
             <ul>
               <li><a href="">
                   <h3>这是文章</h3></a></li>
@@ -78,7 +78,7 @@
         </div>
         <div class="section clearfix">
           <h2>模块二</h2>
-          <div class="part"><img src="./images/logo.png" alt="icon">
+          <div class="part"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="icon">
             <ul>
               <li><a href="">
                   <h3>这是文章</h3></a></li>
@@ -90,7 +90,7 @@
                   <h3>这是文章</h3></a></li>
             </ul>
           </div>
-          <div class="part"><img src="./images/logo.png" alt="icon">
+          <div class="part"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="icon">
             <ul>
               <li><a href="">
                   <h3>这是文章</h3></a></li>
@@ -104,18 +104,18 @@
           </div>
         </div>
         <article class="clearfix">
-          <div class="article_part clearfix"><img src="./images/logo.png" alt="logo">
+          <div class="article_part clearfix"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="logo">
             <h3>这是文章标题字号是22的文章标题</h3>
             <p>文章来源 6分钟前</p>
           </div>
-          <div class="article_part clearfix"><img src="./images/logo.png" alt="logo">
+          <div class="article_part clearfix"><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt="logo">
             <h3>这是文章标题字号是22的文章标题</h3>
             <p>文章来源 6分钟前</p>
           </div>
         </article>
         <div class="more">
           <h3>这也是文章标题字号是22的文章标题</h3>
-          <div class="box"><a href=""><img src="./images/logo.png" alt=""></a><a href=""><img src="./images/logo.png" alt=""></a><a href=""><img src="./images/logo.png" alt=""></a></div>
+          <div class="box"><a href=""><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt=""></a><a href=""><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt=""></a><a href=""><img src="http://img.geekerhua.com/ife/1.11/logo.png" alt=""></a></div>
         </div>
       </div>
     </div>
