--- a/ife-task2.4-基础JavaScript练习（一）.html
+++ b/ife-task2.4-基础JavaScript练习（一）.html
@@ -54,14 +54,20 @@
         };
 
         function addElement(lastElement) {
-            var oDiv = document.createElement('div');
-            var node = document.createTextNode(oTxt.value);
-            oDiv.appendChild(node);
-            oContent.insertBefore(oDiv,lastElement);
-            console.log(oDiv);
-            oDiv.onclick = function(){
-                clickme(oDiv);
-            };
+            // 判断是否是数值
+            var str = oTxt.value;
+            if ((str.length > 0) && (Number(str) >= 0)){
+                var oDiv = document.createElement('div');
+                var node = document.createTextNode(str);
+                oDiv.appendChild(node);
+                oContent.insertBefore(oDiv,lastElement);
+                console.log(oDiv);
+                oDiv.onclick = function(){
+                    clickme(oDiv);
+                };
+            } else {
+                alert('请输入数字');
+            }
         }
 
         oLeftIn.onclick = function(){
