--- a/ife-task2.4-基础JavaScript练习（一）.html
+++ b/ife-task2.4-基础JavaScript练习（一）.html
@@ -55,8 +55,9 @@
 
         function addElement(lastElement) {
             // 判断是否是数值
-            var str = oTxt.value;
-            if ((str.length > 0) && (Number(str) >= 0)){
+            if (!isNaN(oTxt.value) && (oTxt.value.length > 0)){
+                var str = oTxt.value;
+            // if ((str.length > 0) && (Number(str) >= 0)){
                 var oDiv = document.createElement('div');
                 var node = document.createTextNode(str);
                 oDiv.appendChild(node);
